Fix: some post merge fixes to fix 1.21